--- a/Touchstone Brother IpP/MainWindow.xaml
+++ b/Touchstone Brother IpP/MainWindow.xaml
@@ -17,9 +17,8 @@
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVisConv" />
-        <Models:MainWindowViewModel x:Name="MWVModel" x:Key="MWViewModel"/>
+        <Models:MainWindowViewModel x:Key="MWViewModel"/>
     </Window.Resources>
-
 
     <StackPanel>
         <Grid Height="40" VerticalAlignment="Top" Background="#FF404040">
@@ -115,7 +114,7 @@
                                     </Grid>
                                 </DockPanel>
                             </ListViewItem>
-                            <ListViewItem Name="d_Add_Steve_Label" Height="40" Margin="0 10 0 10" HorizontalAlignment="Right" DataContext="{StaticResource MWViewModel}" Visibility="{Binding Debug, Converter={StaticResource BoolToVisConv}}">
+                            <ListViewItem Name="d_Add_Steve_Label" Height="40" Margin="0 10 0 10" HorizontalAlignment="Right" DataContext="{Binding Path=MWViewModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Visibility="{Binding Debug, Converter={StaticResource BoolToVisConv}}">
                                 <DockPanel VerticalAlignment="Center" Height="40" Width="110" HorizontalAlignment="Center">
                                     <Grid HorizontalAlignment="Right">
                                         <Grid.ColumnDefinitions>
