--- a/Touchstone Brother IpP/Startup.xaml
+++ b/Touchstone Brother IpP/Startup.xaml
@@ -1,30 +1,28 @@
-﻿<Window x:Class="Touchstone_Brother_IpP.PopDialog"
+﻿<Window x:Class="Touchstone_Brother_IpP.Startup"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Touchstone_Brother_IpP"
-        xmlns:materialdesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:Metro ="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
-        Title="PopDialog" Height="450" Width="800" SizeToContent="WidthAndHeight" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="#FF2B2B2B">
+        Title="Startup" Height="400" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Foreground="White" FontFamily="Corbel" WindowStyle="None" Background="#2D2D2D">
 
+    <Window.Resources>
+        <Storyboard x:Key="SignUpExpand">
+            <ThicknessAnimation Storyboard.TargetName="ButtonLogin" Storyboard.TargetProperty="Margin" From="0 0 0 10" To="0 80 0 0" DecelerationRatio="0.4" Duration="0:0:0.5"/>
+        </Storyboard>
+        <Storyboard x:Key="SignUpRetract">
+            <ThicknessAnimation Storyboard.TargetName="ButtonLogin" Storyboard.TargetProperty="Margin" From="0 80 0 0" To="0 0 0 10" DecelerationRatio="0.4" Duration="0:0:0.5"/>
+        </Storyboard>
+    </Window.Resources>
 
-
-
-     <Grid>
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="20"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="150"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <DockPanel MouseDown="StackPanel_MouseDown">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="90"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" x:Name="ContentTitle" Margin="7 2 0 0" Foreground="White" FontSize="14" HorizontalAlignment="Left"/>
-                <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="0" >
+        <StackPanel Grid.Row="0">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <StackPanel.Resources>
                     <Style TargetType="{x:Type Button}">
                         <Setter Property="Template">
@@ -68,35 +66,21 @@
                         </Style.Triggers>
                     </Style>
                 </StackPanel.Resources>
-                <Button x:Name="ButtonClose" VerticalAlignment="Center" Background="Red" BorderBrush="{x:Null}" Margin="7 2 15 0" Width="12" Height="12" HorizontalAlignment="Right" HorizontalContentAlignment="Left" Click="ButtonClose_Click"/>
+                <Button x:Name="ButtonClose" VerticalAlignment="Center" Background="Red" BorderBrush="{x:Null}" Margin="7 5 5 0" Width="12" Height="12" HorizontalAlignment="Right" HorizontalContentAlignment="Left" Click="ButtonClose_Click"/>
             </StackPanel>
-            </Grid>
-        </DockPanel>
-        <StackPanel Grid.Row="1">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Grid Grid.Row="0">
-                    <Image x:Name="ContentImage" Width="100" Height="100"/>
-                    <TextBlock x:Name="ContentText" Margin="40 20 40 20" TextWrapping="NoWrap" Foreground="White" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                </Grid>
-                <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-                    <ItemsControl x:Name="MessageBoxContentButtons" Margin="5 0 5 0">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel Orientation="Horizontal"/>
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <Button x:Name="ContentButton" Margin="-1 0 0 10" BorderBrush="{x:Null}" Background="#19ffffff" Content="{Binding ContentButtonText}" FontStyle="Normal" FontWeight="Normal" Width="90" Height="40" Click="ContentButton_Click"/>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </StackPanel>
-            </Grid>
+            <TextBlock Text="TouchStone IPP" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25" Margin="0 40 0 0"/>
+            <Separator Width="100"/>
+            <TextBlock Text="Please Sign in" HorizontalAlignment="Center" Margin="0 10 0 0"/>
+            <TextBlock x:Name="LoginResultText" Text="" Foreground="Red" HorizontalAlignment="Center" Margin="0 10 0 0"/>
         </StackPanel>
+        <Grid Grid.Row="1">
+            <TextBox x:Name="EmailBox"  Width="200" Height="25" VerticalAlignment="Top" Background="LightGray" Text="Email" Foreground="#2D2D2D" FontWeight="Heavy" FontFamily="Comic Sans MS" Margin="0 0 0 0" Visibility="Collapsed" GotKeyboardFocus="EmailBox_GotKeyboardFocus" LostKeyboardFocus="EmailBox_LostKeyboardFocus"/>
+            <PasswordBox x:Name="PasswordBox" Width="200" Height="25" VerticalAlignment="Top" Background="LightGray" Password="password" Foreground="#2D2D2D" FontWeight="Heavy" FontFamily="Comic Sans MS" Margin="0 35 0 15" Visibility="Collapsed" PasswordChar="*" GotKeyboardFocus="PasswordBox_GotKeyboardFocus"/>
+        </Grid>
+        <StackPanel Grid.Row="1">
+            <Button x:Name="ButtonLogin" Width="150" Content="Login" Margin="0 0 0 10" Background="MediumSeaGreen" Click="ButtonLogin_Click" BorderBrush="{x:Null}"/>
+            <Button x:Name="ButtonRegister" Width="150" Content="Register" Background="Gray" BorderBrush="{x:Null}"/>
+        </StackPanel>
+        <TextBlock Grid.Row="1" Text="TouchStone Freight LTD" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0 0 0 5" FontSize="10" />
     </Grid>
 </Window>
