--- a/Touchstone Brother IpP/Startup.xaml
+++ b/Touchstone Brother IpP/Startup.xaml
@@ -5,81 +5,108 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Touchstone_Brother_IpP"
         mc:Ignorable="d"
-        Title="Startup" Height="400" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Foreground="White" FontFamily="Corbel" WindowStyle="None" Background="#2D2D2D">
+        xmlns:MaterialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        Title="Startup" Height="400" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Foreground="White" FontFamily="Corbel" WindowStyle="None" Background="#2D2D2D" Loaded="Window_Loaded">
 
     <Window.Resources>
-        <Storyboard x:Key="SignUpExpand">
+        <Storyboard x:Key="SignInExpand">
             <ThicknessAnimation Storyboard.TargetName="ButtonLogin" Storyboard.TargetProperty="Margin" From="0 0 0 10" To="0 80 0 0" DecelerationRatio="0.4" Duration="0:0:0.5"/>
         </Storyboard>
-        <Storyboard x:Key="SignUpRetract">
+        <Storyboard x:Key="SignInRetract">
             <ThicknessAnimation Storyboard.TargetName="ButtonLogin" Storyboard.TargetProperty="Margin" From="0 80 0 0" To="0 0 0 10" DecelerationRatio="0.4" Duration="0:0:0.5"/>
+        </Storyboard>
+        <Storyboard x:Key="SignUpExpand">
+            <ThicknessAnimation Storyboard.TargetName="ButtonLogin" Storyboard.TargetProperty="Margin" From="0 0 0 10" To="0 120 0 0" DecelerationRatio="0.4" Duration="0:0:0.5"/>
+        </Storyboard>
+        <Storyboard x:Key="SignUpRetract">
+            <ThicknessAnimation Storyboard.TargetName="ButtonLogin" Storyboard.TargetProperty="Margin" From="0 120 0 0" To="0 0 0 10" DecelerationRatio="0.4" Duration="0:0:0.5"/>
         </Storyboard>
     </Window.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="150"/>
+            <RowDefinition Height="170"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <StackPanel.Resources>
-                    <Style TargetType="{x:Type Button}">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="Button">
-                                    <Grid>
-                                        <Ellipse Fill="{TemplateBinding Background}"/>
-                                    </Grid>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                        <Style.Triggers>
-                            <EventTrigger RoutedEvent="MouseEnter">
-                                <BeginStoryboard>
-                                    <Storyboard>
-                                        <ColorAnimation From="#ff1414" To="#ff5900" Duration="0:0:0.2" Storyboard.TargetProperty="Background.Color"/>
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </EventTrigger>
-                            <EventTrigger RoutedEvent="MouseLeave">
-                                <BeginStoryboard>
-                                    <Storyboard>
-                                        <ColorAnimation From="#ff5900" To="#ff1414" Duration="0:0:0.2" Storyboard.TargetProperty="Background.Color"/>
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </EventTrigger>
-                            <EventTrigger RoutedEvent="PreviewMouseDown">
-                                <BeginStoryboard>
-                                    <Storyboard>
-                                        <ColorAnimation From="#ff5900" To="#ffccaf" Duration="0:0:0.1" Storyboard.TargetProperty="Background.Color"/>
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </EventTrigger>
-                            <EventTrigger RoutedEvent="PreviewMouseUp">
-                                <BeginStoryboard>
-                                    <Storyboard>
-                                        <ColorAnimation From="#ffccaf" To="#ff5900" Duration="0:0:0.1" Storyboard.TargetProperty="Background.Color"/>
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </EventTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </StackPanel.Resources>
-                <Button x:Name="ButtonClose" VerticalAlignment="Center" Background="Red" BorderBrush="{x:Null}" Margin="7 5 5 0" Width="12" Height="12" HorizontalAlignment="Right" HorizontalContentAlignment="Left" Click="ButtonClose_Click"/>
-            </StackPanel>
-            <TextBlock Text="TouchStone IPP" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25" Margin="0 40 0 0"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Grid>
+                        <Grid.Resources>
+                            <Style TargetType="{x:Type Button}">
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="Button">
+                                            <Grid>
+                                                <Ellipse Fill="{TemplateBinding Background}"/>
+                                            </Grid>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                                <Style.Triggers>
+                                    <EventTrigger RoutedEvent="MouseEnter">
+                                        <BeginStoryboard>
+                                            <Storyboard>
+                                                <ColorAnimation From="#ff1414" To="#ff5900" Duration="0:0:0.2" Storyboard.TargetProperty="Background.Color"/>
+                                            </Storyboard>
+                                        </BeginStoryboard>
+                                    </EventTrigger>
+                                    <EventTrigger RoutedEvent="MouseLeave">
+                                        <BeginStoryboard>
+                                            <Storyboard>
+                                                <ColorAnimation From="#ff5900" To="#ff1414" Duration="0:0:0.2" Storyboard.TargetProperty="Background.Color"/>
+                                            </Storyboard>
+                                        </BeginStoryboard>
+                                    </EventTrigger>
+                                    <EventTrigger RoutedEvent="PreviewMouseDown">
+                                        <BeginStoryboard>
+                                            <Storyboard>
+                                                <ColorAnimation From="#ff5900" To="#ffccaf" Duration="0:0:0.1" Storyboard.TargetProperty="Background.Color"/>
+                                            </Storyboard>
+                                        </BeginStoryboard>
+                                    </EventTrigger>
+                                    <EventTrigger RoutedEvent="PreviewMouseUp">
+                                        <BeginStoryboard>
+                                            <Storyboard>
+                                                <ColorAnimation From="#ffccaf" To="#ff5900" Duration="0:0:0.1" Storyboard.TargetProperty="Background.Color"/>
+                                            </Storyboard>
+                                        </BeginStoryboard>
+                                    </EventTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Grid.Resources>
+                        <Button x:Name="ButtonClose" VerticalAlignment="Center" Background="Red" BorderBrush="{x:Null}" Margin="7 5 5 0" Width="12" Height="12" HorizontalAlignment="Right" HorizontalContentAlignment="Left" Click="ButtonClose_Click"/>
+                    </Grid>
+                </StackPanel>
+                <StackPanel>
+                    <Grid x:Name="BackButton" Width="30" Height="30" HorizontalAlignment="Left" Visibility="Hidden">
+                        <Button Width="40" Background="#252525" BorderBrush="{x:Null}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 0" Click="Button_Click">
+                            <MaterialDesign:PackIcon Kind="ArrowLeft" HorizontalAlignment="Center" Width="50" Margin="-5 0 0 0"/>
+                        </Button>
+                    </Grid>
+                </StackPanel>
+            </Grid>
+            <TextBlock Text="TouchStone IPP" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25" Margin="0 20 0 0"/>
             <Separator Width="100"/>
-            <TextBlock Text="Please Sign in" HorizontalAlignment="Center" Margin="0 10 0 0"/>
-            <TextBlock x:Name="LoginResultText" Text="" Foreground="Red" HorizontalAlignment="Center" Margin="0 10 0 0"/>
+            <TextBlock x:Name="StageText"  Width="250" TextWrapping="Wrap" TextAlignment="Center" Text="Please Sign in" HorizontalAlignment="Center" Margin="0 10 0 0"/>
+            <TextBlock x:Name="LoginResultText" Width="250" TextWrapping="Wrap" Text="" TextAlignment="Center" Foreground="Red" HorizontalAlignment="Center" Margin="0 10 0 0" />
+            
         </StackPanel>
         <Grid Grid.Row="1">
             <TextBox x:Name="EmailBox"  Width="200" Height="25" VerticalAlignment="Top" Background="LightGray" Text="Email" Foreground="#2D2D2D" FontWeight="Heavy" FontFamily="Comic Sans MS" Margin="0 0 0 0" Visibility="Collapsed" GotKeyboardFocus="EmailBox_GotKeyboardFocus" LostKeyboardFocus="EmailBox_LostKeyboardFocus"/>
-            <PasswordBox x:Name="PasswordBox" Width="200" Height="25" VerticalAlignment="Top" Background="LightGray" Password="password" Foreground="#2D2D2D" FontWeight="Heavy" FontFamily="Comic Sans MS" Margin="0 35 0 15" Visibility="Collapsed" PasswordChar="*" GotKeyboardFocus="PasswordBox_GotKeyboardFocus"/>
+            <PasswordBox x:Name="PasswordBox" Width="200" Height="25" VerticalAlignment="Top" Background="LightGray" Password="password" Foreground="#2D2D2D" FontWeight="Heavy" FontFamily="Comic Sans MS" Margin="0 35 0 15" Visibility="Collapsed" PasswordChar="*" GotKeyboardFocus="PasswordBox_GotKeyboardFocus" LostKeyboardFocus="PasswordBox_LostKeyboardFocus" PasswordChanged="PasswordBox_PasswordChanged"/>
+            <Ellipse x:Name="PasswordStrength" Width="15" Height="15" VerticalAlignment="Top" Fill="Red" Margin="220 40 0 15" Visibility="Hidden"/>
+            <TextBlock x:Name="NumberGenText" Text="What Number is this" VerticalAlignment="Top" Foreground="White" FontWeight="Normal" FontFamily="Comic Sans MS" Margin="65 65 0 15" Visibility="Collapsed"/>
+            <TextBlock x:Name="NumberGen" Text="////" VerticalAlignment="Top" Foreground="Red" FontWeight="Heavy" FontFamily="Comic Sans MS" Margin="215 65 0 15" Visibility="Collapsed"/>
+            <TextBox x:Name="NumberBox"  Width="100" Height="25" VerticalAlignment="Top" Background="#3D3D3D" Text="Number" Foreground="LightGray" FontWeight="Heavy" FontFamily="Comic Sans MS" Margin="0 85 0 15" Visibility="Collapsed" GotKeyboardFocus="NumberBox_GotKeyboardFocus" LostKeyboardFocus="NumberBox_LostKeyboardFocus"/>
         </Grid>
         <StackPanel Grid.Row="1">
             <Button x:Name="ButtonLogin" Width="150" Content="Login" Margin="0 0 0 10" Background="MediumSeaGreen" Click="ButtonLogin_Click" BorderBrush="{x:Null}"/>
-            <Button x:Name="ButtonRegister" Width="150" Content="Register" Background="Gray" BorderBrush="{x:Null}"/>
+            <Button x:Name="ButtonRegister" Width="150" Content="Register" Background="Gray" Click="ButtonRegister_Click" BorderBrush="{x:Null}"/>
         </StackPanel>
         <TextBlock Grid.Row="1" Text="TouchStone Freight LTD" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0 0 0 5" FontSize="10" />
     </Grid>
