--- a/Touchstone Brother IpP/App.xaml
+++ b/Touchstone Brother IpP/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Touchstone_Brother_IpP"
+             xmlns:properties="clr-namespace:Touchstone_Brother_IpP.Properties"
              StartupUri="Startup.xaml">
     <Application.Resources>
         <ResourceDictionary>
