--- a/Touchstone Brother IpP/Startup.xaml
+++ b/Touchstone Brother IpP/Startup.xaml
@@ -10,10 +10,10 @@
 
     <Window.Resources>
         <Storyboard x:Key="SignInExpand">
-            <ThicknessAnimation Storyboard.TargetName="ButtonLogin" Storyboard.TargetProperty="Margin" From="0 0 0 10" To="0 80 0 0" DecelerationRatio="0.4" Duration="0:0:0.5"/>
+            <ThicknessAnimation Storyboard.TargetName="ButtonLogin" Storyboard.TargetProperty="Margin" From="0 0 0 10" To="0 100 0 0" DecelerationRatio="0.4" Duration="0:0:0.5"/>
         </Storyboard>
         <Storyboard x:Key="SignInRetract">
-            <ThicknessAnimation Storyboard.TargetName="ButtonLogin" Storyboard.TargetProperty="Margin" From="0 80 0 0" To="0 0 0 10" DecelerationRatio="0.4" Duration="0:0:0.5"/>
+            <ThicknessAnimation Storyboard.TargetName="ButtonLogin" Storyboard.TargetProperty="Margin" From="0 100 0 0" To="0 0 0 10" DecelerationRatio="0.4" Duration="0:0:0.5"/>
         </Storyboard>
         <Storyboard x:Key="SignUpExpand">
             <ThicknessAnimation Storyboard.TargetName="ButtonLogin" Storyboard.TargetProperty="Margin" From="0 0 0 10" To="0 120 0 0" DecelerationRatio="0.4" Duration="0:0:0.5"/>
@@ -84,7 +84,7 @@
                 </StackPanel>
                 <StackPanel>
                     <Grid x:Name="BackButton" Width="30" Height="30" HorizontalAlignment="Left" Visibility="Hidden">
-                        <Button Width="40" Background="#252525" BorderBrush="{x:Null}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 0" Click="Button_Click">
+                        <Button Width="40" Background="#252525" BorderBrush="{x:Null}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 0" Click="BackButton_Click">
                             <MaterialDesign:PackIcon Kind="ArrowLeft" HorizontalAlignment="Center" Width="50" Margin="-5 0 0 0"/>
                         </Button>
                     </Grid>
@@ -98,7 +98,8 @@
         </StackPanel>
         <Grid Grid.Row="1">
             <TextBox x:Name="EmailBox"  Width="200" Height="25" VerticalAlignment="Top" Background="LightGray" Text="Email" Foreground="#2D2D2D" FontWeight="Heavy" FontFamily="Comic Sans MS" Margin="0 0 0 0" Visibility="Collapsed" GotKeyboardFocus="EmailBox_GotKeyboardFocus" LostKeyboardFocus="EmailBox_LostKeyboardFocus"/>
-            <PasswordBox x:Name="PasswordBox" Width="200" Height="25" VerticalAlignment="Top" Background="LightGray" Password="password" Foreground="#2D2D2D" FontWeight="Heavy" FontFamily="Comic Sans MS" Margin="0 35 0 15" Visibility="Collapsed" PasswordChar="*" GotKeyboardFocus="PasswordBox_GotKeyboardFocus" LostKeyboardFocus="PasswordBox_LostKeyboardFocus" PasswordChanged="PasswordBox_PasswordChanged"/>
+            <PasswordBox x:Name="PasswordBox" Width="200" Height="25" VerticalAlignment="Top" Background="LightGray" Password="pass" Foreground="#2D2D2D" FontWeight="Heavy" FontFamily="Comic Sans MS" Margin="0 35 0 15" Visibility="Collapsed" PasswordChar="*" GotKeyboardFocus="PasswordBox_GotKeyboardFocus" LostKeyboardFocus="PasswordBox_LostKeyboardFocus" PasswordChanged="PasswordBox_PasswordChanged"/>
+            <CheckBox x:Name="SaveEmailCheck" Content="Remember me" VerticalAlignment="Top" Foreground="White" FontWeight="Normal" FontFamily="Comic Sans MS" Margin="65 65 0 15" Background="White" Visibility="Collapsed"/>
             <Ellipse x:Name="PasswordStrength" Width="15" Height="15" VerticalAlignment="Top" Fill="Red" Margin="220 40 0 15" Visibility="Hidden"/>
             <TextBlock x:Name="NumberGenText" Text="What Number is this" VerticalAlignment="Top" Foreground="White" FontWeight="Normal" FontFamily="Comic Sans MS" Margin="65 65 0 15" Visibility="Collapsed"/>
             <TextBlock x:Name="NumberGen" Text="////" VerticalAlignment="Top" Foreground="Red" FontWeight="Heavy" FontFamily="Comic Sans MS" Margin="215 65 0 15" Visibility="Collapsed"/>
